--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "hardhat": "^2.17.4"
   },
   "devDependencies": {
+    "@chainlink/contracts": "^0.7.1",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
