--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^1.0.0",
     "@openzeppelin/contracts": "^4.9.3",
+    "@pinata/sdk": "^2.1.0",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
     "@types/chai": "^4.2.0",
@@ -20,6 +21,7 @@
     "ethers": "^6.4.0",
     "hardhat-deploy": "^0.11.37",
     "hardhat-gas-reporter": "^1.0.8",
+    "path": "^0.12.7",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
