--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/chai": "^4.2.0",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=16.0.0",
+    "base64-sol": "^1.1.0",
     "chai": "^4.2.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.4.0",
